# Quality-Beta

./: .cproject  .project  CMakeLists.txt  README.md
src/: main.cpp
